--- a/Module1/bài tập về nhà/biến kiểu dữ liệu toán tử.html
+++ b/Module1/bài tập về nhà/biến kiểu dữ liệu toán tử.html
@@ -90,6 +90,9 @@
           </select>
           </td>
       </tr>
+      <tr>
+          <td><input type="button" onclick="dat_phong" value="gửi đi"> </td>
+      </tr>
   </table>
 </body>
 </html>
