--- a/Module1/cấu trúc điều kiện 2/bài tập/câu lệnh switch-cause.html
+++ b/Module1/cấu trúc điều kiện 2/bài tập/câu lệnh switch-cause.html
@@ -5,6 +5,36 @@
     <title>bài tập 2</title>
 </head>
 <body>
-
+<table>
+    <tr>
+        <input type = "number" id="number">
+        <input type ="button" value="tính số ngày" onclick="songay()">
+    </tr>
+</table>
+<script>
+    let number = document.getElementById("number")
+    function songay() {
+        switch (number.value) {
+            case '1':
+            case '3':
+            case '5':
+            case '7':
+            case '8':
+            case '10':
+            case '12':
+                alert("tháng 1 có 31 ngày");
+                break;
+            case '2':
+               alert ("tháng 2 có 28 hoặc 29 ngày");
+                break;
+            case '4':
+            case '6':
+            case '9':
+            case '11':
+               alert("tháng 4 có 30 ngày");
+                break;
+        }
+    }
+</script>
 </body>
 </html>
