thực hành cấu trúc lặp 1

--- a/Module1/bài tập về nhà/bài tập yêu càu 2.html
+++ b/Module1/bài tập về nhà/bài tập yêu càu 2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>biến kiểu dữ liệu và toán tử</title>
 </head>
-<body>
+<body id="form" name="form1">
 <table>
     <tr>
         <td>name</td><br>
@@ -39,10 +39,10 @@
         <td><input type="text" id="address"></td>
     </tr>
     <tr>
-        <td id="customer">customer</td>
+        <td >customer</td>
     </tr>
     <tr>
-        <td><select>
+        <td><select id="customer">
             <option>diamont</option>
             <option>platinum</option>
             <option>gold</option>
@@ -68,13 +68,12 @@
         <td><input type="number" id="ngay"></td>
     </tr>
     <tr>
-        <td>service:</td>
+        <td><label for="server">service:</label></td>
     </tr>
     <tr>
-        <td><input type="checkbox" value="villa">Villa
-            <input type="checkbox" value="house">House
+        <td><label><input type="checkbox "id="server" value="villa"></label>
+            <label> <input type="checkbox"id="server1" value="house"></label>
             <input type="checkbox" value="room">Room
-        </select>
         </td>
     </tr>
     <tr>
