luyện tập vòng lặp 1

--- a/Module1/cấu trúc lặp 2/bài tập/bài tập 1.html
+++ b/Module1/cấu trúc lặp 2/bài tập/bài tập 1.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>đếm số từ 1 đến 100</title>
 </head>
 <body>
+   <script>
+       let i = 1;
+       for (i=1;i <= 100 ;i++) {
+           document.write(i)
+           if (i==99){
+               alert("hoàn thành")
+               break;
 
+           }
+       }
+   </script>
 </body>
 </html>
