bài tập-thực hành bài hàm và đối tượng

--- a/Module1/mảng 2/bài tập/luyện tập mảng 1.html
+++ b/Module1/mảng 2/bài tập/luyện tập mảng 1.html
@@ -86,9 +86,12 @@
          //     if (arr[i] == num1) {
          //         document.write(num1 + "is in the array" + " ");
          //         break;
+         // i sẽ chạy từ 0-9 nếu hết sẽ dừng ko in ra câu còn lại
+         // nếu đặt else trong vòng lặp thì mỗi giá trị khác num1 sẽ cho 1 chữ is not....(9 lần)
          //     }
          // }
-         // if (i == 10){
+         // if (i == 10{
+         // nếu i chạy tới giá trị thứ 10 thì in ra
          //     document.write( num1 + "is not in the array"+ " "); }
 if (arr.indexOf(num1) !== -1) {
     document.write(num1 + "is in the array" + " ");
