--- a/Module1/hướng đối tượng/thực hành/thực hành 2.html
+++ b/Module1/hướng đối tượng/thực hành/thực hành 2.html
@@ -7,7 +7,7 @@
 <body>
  <script>
      class circle {
-         constructor(radiuscolor) {
+         constructor(radius,color) {
              this.radius =radius;
              this.color = color;
          }
