--- a/Module1/bài tập về nhà/yêu cầu 5/task yêu cầu 5.html
+++ b/Module1/bài tập về nhà/yêu cầu 5/task yêu cầu 5.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>mô tả điện thoại</title>
+    <title>yêu cầu 5</title>
 </head>
 <body>
- <script>
+<script>
 
- </script>
+</script>
 </body>
 </html>
